# MagmaWM

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  default.nix  flake.nix  magmawm.nix  shell.nix
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: a_make_a_report.yml  config.yml
.github/ISSUE_TEMPLATE  /: a_make_a_report.yml
.github/workflows/: auto-assign.yaml  ci.yaml  nix.yaml  rust
magma-ipc/: Cargo.toml  ipc.xml
magma-ipc/src/: main.rs
magma-ipc/src/ipc/: mod.rs  workspaces.rs
nix/: magmawm.nix
pkgbuild/: 50-systemd-user.conf  PKGBUILD  PKGBUILD-GIT  pkgbuild-git
src/: debug.rs  error.rs  main.rs  state.rs
src/backends/: mod.rs  udev.rs  winit.rs
src/config/: mod.rs  types.rs
src/handlers/: input.rs  mod.rs  xdg_shell.rs
src/ipc/: mod.rs  workspaces.rs
src/layouts/: dwindle.rs  mod.rs
src/protocols/screencopy/: frame.rs  mod.rs
src/utils/: binarytree.rs  focus.rs  log.rs  mod.rs  process.rs  render.rs  tiling.rs  workspace.rs  xcursor.rs
src/utils/render/: border.rs  corners.rs  mod.rs
src/utils/render/shaders/: borders.frag  rounded_borders.frag  rounded_corners.frag
src/xwayland/: mod.rs
