[package]
name = "magmawm"
version = "0.0.1"
edition = "2021"

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4.24"
backtrace = "0.3.67"
smithay-drm-extras = { git = "https://github.com/Smithay/smithay.git"}
ron = "0.8"
serde = { version = "1", features = ["derive"] }
xdg = "^2.1"
once_cell = "1.17.1"
magma-ipc = { path = "./magma-ipc" }
wayland-scanner = "0.30.0"
wayland-backend = "0.1.2"
indexmap = { version = "1.9.3", features = ["serde"] }
colors-transform = "0.2.11"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
    "backend_session_libseat",
    "backend_drm",
    "renderer_multi",
    "renderer_glow",
    "backend_gbm",
    "backend_udev",
    "backend_libinput",
]
