[package]
name = "magmawm"
version = "0.0.1"
edition = "2021"

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
chrono = "0.4.24"
backtrace = "0.3.67"
smithay-drm-extras = { git = "https://github.com/Smithay/smithay.git"}
ron = "0.8"
serde = { version = "1", features = ["derive"] }
xdg = "^2.1"
once_cell = "1.17.1"
indexmap = { version = "1.9.3", features = ["serde"] }
colors-transform = "0.2.11"
egui = { version = "0.23", optional = true }
egui_plot = { version = "0.23", optional = true }
clap = { version = "4.5.4", features = ["derive"] }
xcursor = "0.3.5"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
    "backend_session_libseat",
    "backend_drm",
    "renderer_multi",
    "renderer_glow",
    "backend_gbm",
    "backend_udev",
    "backend_egl",
    "backend_libinput",
    "use_system_lib",
]

[dependencies.smithay-egui]
git = "https://github.com/Smithay/smithay-egui.git"
optional = true

[features]
default = ["debug"]
debug = ["egui", "egui_plot", "smithay-egui"]

[patch."https://github.com/Smithay/smithay.git"]
smithay = { git = "https://github.com/smithay//smithay" }
